# quadratic-map-attractor

./: .commit_msg.txt  .gitignore  Cargo.toml  README.md  evaluate_divergence.py  explore.py  pyproject.toml
.github/workflows/: deploy.yml
specs/: draft.md
src/: lib.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/shaders/: compute.wgsl  render.wgsl
